hphp/hack/test/typecheck/mixed_lambda_explicit_return_ko.php
<?hh

class C {
  public function __construct(
    public mixed $f,
  ) {}
}

function f(): void {
  new C(($x) : int ==> $x);
}
